src/app.css
:root {
  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #242424;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

a {
  font-weight: 500;
  color: #646cff;
  text-decoration: inherit;
}
a:hover {
  color: #535bf2;
}

body {
  margin: 0;
  display: flex;
  place-items: center;
  min-width: 320px;
  min-height: 100vh;
  /* background-color: #ffdf8f; */
  /* background-color: #d1ffc4; */
  background-color: #8ffdca;
}

h1 {
  font-size: 3.2em;
  line-height: 1.1;
}

h2 {
  font-size: 1.2rem;
  /* padding-top: 0em; */
}

.card {
  padding: 2em;
}

#app {
  max-width: 1280px;
  margin: 0 auto;
  padding: 2rem;
  text-align: center;
}

button {
  border-radius: 8px;
  /* border: 1px solid transparent; */
  border: 0;
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  background-color: #ffdf8f;
  cursor: pointer;
  /* transition: border-color 0.25s; */
}

/* button:hover {
  border-color: #646cff;
}
button:focus,
button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
} */


select {
  width: 8em;
  padding-left: 0.5em;
  border-top: 1px solid lightgray;
  border-right: 1px solid lightgray;
  border-bottom: 1px solid lightgray;
  border-top-right-radius: 5px;
  border-bottom-right-radius: 5px;
  background-color: white;
  font-size:larger;
  color: #434343;
}

input {
  width: calc(100% - 9em);
  border-top-left-radius: 5px;
  border-bottom-left-radius: 5px;
  padding: 0.25em 0.5em;
  border-top: 1px solid lightgray;
  border-left: 1px solid lightgray;
  border-bottom: 1px solid lightgray;
  border-right: 0;
  font-size:larger;
  color: #434343;
  text-align: right;
}


@media (prefers-color-scheme: light) {
  :root {
    color: #213547;
    background-color: #ffffff;
  }
  a:hover {
    color: #747bff;
  }
  button {
    /* background-color: #f9f9f9; */
    background-color: #fff;
  }
}

